--- a/ZstdNet/ZstdNet.csproj
+++ b/ZstdNet/ZstdNet.csproj
@@ -1,18 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<Version>1.3.3</Version>
+		<Version>1.3.4</Version>
 		<TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
-		<Title>ZstdNet</Title>
+		<Title>ZstdNetHpa</Title>
 		<PackageId>ZstdNetHpa</PackageId>
 		<Company>SKB Kontur</Company>
-		<Authors>SKB Kontur</Authors>
+		<Authors>SKB Kontur, HPA</Authors>
 		<Description>Zstd compression library wrapper for .NET - Signed by HPA</Description>
 		<Copyright>Copyright © SKB Kontur 2016-2018</Copyright>
-		<PackageLicenseUrl></PackageLicenseUrl>
+		<PackageLicenseUrl>https://github.com/skbkontur/ZstdNet/blob/master/LICENSE</PackageLicenseUrl>
 		<PackageProjectUrl>https://github.com/HPA-Cognizant/ZstdNet</PackageProjectUrl>
 		<PackageTags>zstd zstandard compression</PackageTags>
 		<SignAssembly>true</SignAssembly>
 		<AssemblyOriginatorKeyFile>ZstdNet.snk</AssemblyOriginatorKeyFile>
+		<RepositoryUrl>https://github.com/HPA-Cognizant/ZstdNet.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="build\x64\libzstd.dll">
@@ -28,11 +31,4 @@
 		<None Include="build\**\*" Pack="true" PackagePath="build\" />
 		<None Include="..\LICENSE" Pack="true" PackagePath="lib\" />
 	</ItemGroup>
-  <PropertyGroup>
-    <NuspecFile>ZstdNet.nuspec</NuspecFile>
-    <NuspecProperties>$(NuspecProperties);version=$(Version)</NuspecProperties>
-    <NuspecProperties>$(NuspecProperties);id=$(PackageId)</NuspecProperties>
-    <NuspecProperties>$(NuspecProperties);author=$(Authors)</NuspecProperties>
-    <NuspecProperties>$(NuspecProperties);Description=$(Description)</NuspecProperties>
-  </PropertyGroup>
 </Project>
